--- a/Course#3Assignment/codebook.Rmd
+++ b/Course#3Assignment/codebook.Rmd
@@ -21,15 +21,16 @@ This dataset contains the data about mean and standard deviation of body acceler
 
 Name of variable       |  Data Type | Description
 ---------------------- | ---------- | -----------------------------------------------------------------------------
- subject_no            | integer    | The subject number represents for which participant the measurments were taken. 
- activity_type         | factor     | The type of activity during which the measurments were taken.
- tBodyAcc_mean_X | numeric |  Mean of body acceleration in x direction
- tBodyAcc_mean_Y | numeric |  Mean of body acceleration in y direction
- tBodyAcc_mean_Y | numeric |  Mean of body acceleration in z direction
- tBodyAcc_std_X  | numeric |  Standart deviation of body acceleration in x direction
- tBodyAcc_std_Y  | numeric |  Standart deviation of body acceleration in y direction
- tBodyAcc_std_Z  | numeric |  Standart deviation of body acceleration in z direction
+ subjectNo            | integer    | The subject number represents for which participant the measurments were taken. 
+ activityType         | factor     | The type of activity during which the measurments were taken.
+ tBodyAccelerationMeanX | numeric |  Mean of the body acceleration in x direction per participant per activity
+ tBodyAccelerationMeanY | numeric |  Mean of the body acceleration in y direction per participant per activity
+ tBodyAccelerationMeanZ | numeric |  Mean of the body acceleration in z direction per participant per activity
+ tBodyAccelerationStdX  | numeric |  Standart deviation of body acceleration in x direction per participant per activity
+ tBodyAccelerationStdY  | numeric |  Standart deviation of body acceleration in y direction per participant per activity
+ tBodyAccelerationStdZ  | numeric |  Standart deviation of body acceleration in z direction per participant per activity
 
+ 
  
  There are 30 participants who took part in that experiemnt and they performed 6 different types of activities:
  
@@ -44,7 +45,7 @@ Name of variable       |  Data Type | Description
  
 ### Performed Transformation
 
-To received the tidy data set as above the following steps need to be performed:
+To received the clean and tidy dataset as above the following steps need to be performed:
 
     1. download and read the source test and training data with the measurments
     2. merge the test and training data together
@@ -57,7 +58,7 @@ To received the tidy data set as above the following steps need to be performed:
     9. add the dataset with activity type to the dataset with measurments - created at step 3
     10. add the dataset about the subject to the dataset created in step 9
     11. add the name for the first two column of the new dataset - subject number and activity type
-    12. subset only the columns with subject no, activity type and the ones related to mean and standart deviation
+    12. subset only the columns with subject no, activity type and the ones related to mean and standard deviation
     13. replace the activity number with the descriptive name
     14. rename the columns with more descriptive ones.
     15. convert the activity type from character to factor.
@@ -66,7 +67,7 @@ To received the tidy data set as above the following steps need to be performed:
 
 ## Second dataset: avg_body_acc_per_activity_type_per_subject.txt
 
-This file contains the average of linear body acceleration for each activity type and each subject.
+This file contains the average of mean and standard deviation of linear body acceleration for each activity type and each subject.
 
 ### Variable
 
@@ -74,14 +75,14 @@ This file contains the average of linear body acceleration for each activity typ
 
  Name of variable  | Data Type | Description
  ------------- | ------------- | ----------
- activity_type  | factor |  The type of activity during which the measurments were taken. 
- subject_no  | integer |  The subject number represents for which participant the measurments were taken. 
- avg_tBodyAcc_mean_X | numeric | average of mean of body acceleration in x direction per activity type per user 
- avg_tBodyAcc_mean_Y | numeric | average of mean of body acceleration in y direction per activity type per user 
- avg_tBodyAcc_mean_Z | numeric |  average of mean of body acceleration in z direction per activity type per user 
- avg_tBodyAcc_std_X  | numeric | average of standart deviation of body accelaration in x directon per activity type per user
- avg_tBodyAcc_std_Y | numeric |  average of standart deviation of body accelaration in y directon per activity type per user
- avg_tBodyAcc_std_Y | numeric |  average of standart deviation of body accelaration in z directon per activity type per user
+ activityType  | factor |  The type of activity during which the measurments were taken. 
+ subjectNo  | integer |  The subject number represents for which participant the measurments were taken. 
+ avgtBodyAccMeanX | numeric | Average of mean of body acceleration in x direction per activity type per user 
+ avgtBodyAccMeanY | numeric | Average of mean of body acceleration in y direction per activity type per user 
+ avgtBodyAccMeanZ | numeric | Average of mean of body acceleration in z direction per activity type per user 
+ avgtBodyAccStdX  | numeric | Average of standart deviation of body accelaration in x directon per activity type per user
+ avgtBodyAccStdY | numeric | Average of standart deviation of body accelaration in y directon per activity type per user
+ avgtBodyAccStdZ | numeric | Average of standart deviation of body accelaration in z directon per activity type per user
 
 
 
