Final submission - small changes in md files

--- a/Course#3Assignment/README.Rmd
+++ b/Course#3Assignment/README.Rmd
@@ -1,4 +1,7 @@
-#**Data Science Scpecialization**
+---
+output: pdf_document
+---
+#**Data Science Specialization**
 
 ##**Course 3: Getting and cleaning the data - Project**
 
